1. Removed warnings which are not so critical. 2. Added temp & log folder in search exclude path

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,20 @@
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+browser.reload.on.save=true
+code.analysis.excludes=
+file.reference.247around-adminp-aws-247around_tmp=247around_tmp
+file.reference.247around-adminp-aws-sitemap=sitemap
+file.reference.application-logs=application/logs
+file.reference.application-logs1=application/logs1
+ignore.path=\
+    ${file.reference.247around-adminp-aws-247around_tmp}:\
+    ${file.reference.247around-adminp-aws-sitemap}:\
+    ${file.reference.application-logs}:\
+    ${file.reference.application-logs1}
 include.path=${php.global.include.path}
 php.version=PHP_56
 source.encoding=UTF-8
